--- a/shared/pages/Invite/style.css
+++ b/shared/pages/Invite/style.css
@@ -8,10 +8,10 @@
     .text {
       color: #FFF;
       font-family: "Jersey10";
-      font-size: 120px;
+      font-size: 72px;
       font-style: normal;
       font-weight: 400;
-      line-height: 140px;
+      line-height: 84px;
       text-align: center;
     }
 
